--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^6.2.1",
     "luxon": "^1.26.0",
     "popper.js": "1.11.0",
+    "prismjs": "^1.24.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
