--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@popperjs/core": "^2.9.3",
     "concurrently": "^6.2.1",
     "luxon": "^1.26.0",
-    "popper.js": "1.11.0",
     "prismjs": "^1.24.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
