--- a/projects/devpro-component-library/package.json
+++ b/projects/devpro-component-library/package.json
@@ -5,7 +5,7 @@
     "@angular/common": "^12.2.0",
     "@angular/core": "^12.2.0",
     "@angular/localize": "^12.2.2",
-    "popper.js": "1.11.0",
+    "@popperjs/core": "^2.9.3",
     "luxon": "^1.26.0"
   },
   "dependencies": {
