--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^1.26.0",
     "prismjs": "^1.24.1",
     "rxjs": "~6.6.0",
+    "tailwind-css-variables": "^3.0.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
