--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@popperjs/core": "^2.9.3",
     "concurrently": "^6.2.1",
     "luxon": "^1.26.0",
+    "ngx-clipboard": "^14.0.1",
     "prismjs": "^1.24.1",
     "rxjs": "~6.6.0",
     "tailwind-css-variables": "^3.0.1",
